All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/SPM_Repeat_Visit__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Holds the repeat visit status of the Work-orders that got into the system</description>
    <label>SPM - Repeat Visit</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Repeat Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>