All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/First_Incident_On__c.field-meta.xml
<CustomField>
    <fullName>First_Incident_On__c</fullName>
    <description>Holds the Work Order Creation date</description>
    <label>First Incident On</label>
    <type>Date</type>
</CustomField>