All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Installed Product</description>
    <label>Installed Product</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipLabel>SPM - Repeat Visits</relationshipLabel>
    <relationshipName>SPM_Repeat_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>