All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/Is_Repeat_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Repeat_Visit__c</fullName>
    <description>Holds the repeat visit status based on the value present in Repeat Visit Within (Days) field.</description>
    <formula>!ISNULL( Subsequent_Incident_On__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repeat Visit?</label>
    <type>Checkbox</type>
</CustomField>