All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/Repeat_Visit_Within__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Visit_Within__c</fullName>
    <formula>Subsequent_Incident_On__c - First_Incident_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repeat Visit Within (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>