All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the reference to Service Team Object</description>
    <label>Service Team</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipLabel>SPM - Repeat Visits</relationshipLabel>
    <relationshipName>SPM_Repeat_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>