All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/Subsequent_Incident_On__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Incident_On__c</fullName>
    <description>Holds the Subsequent Work Order Creation date</description>
    <label>Followup Incident On</label>
    <type>Date</type>
</CustomField>