All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/Subsequent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the Subsequent Work Order Reference</description>
    <label>Followup Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>SPM - Repeat Visits (Subsequent Work Order)</relationshipLabel>
    <relationshipName>SPM_Repeat_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>