All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the reference to Technician Object</description>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>SPM - Repeat Visits</relationshipLabel>
    <relationshipName>SPM_Repeat_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>