All_Component_DX/force-app/main/default/objects/SPM_Repeat_Visit__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the Work Order reference</description>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>SPM - Repeat Visits (Work Order)</relationshipLabel>
    <relationshipName>SPM_Repeat_Visit1</relationshipName>
    <type>Lookup</type>
</CustomField>